--- a/frontend/src/styles/dashboard.scss
+++ b/frontend/src/styles/dashboard.scss
@@ -35,6 +35,7 @@
                 border-radius: 10px;
                 font-size: 1.2rem;
                 font-weight: 500;
+                cursor: pointer;
             }
         }
     }
