--- a/frontend/src/components/landing_page/landing_navbar.css
+++ b/frontend/src/components/landing_page/landing_navbar.css
@@ -4,14 +4,17 @@
     box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     backdrop-filter: blur(20px);
-    position: fixed;
+   
     height:7vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
+.logo{
+    height: 60px;
+    width: 170px;
+}
 .right-login-navbar{
     display: flex;
     justify-content: center;
