some minor changes

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -11,6 +11,7 @@
         font-family: Ubuntu;
         font-size: 2rem;
         font-weight: 700;
+        cursor: pointer;
     }
     .navmain2{
         display: flex;
