--- a/frontend/src/components/landing_page/landing_navbar.css
+++ b/frontend/src/components/landing_page/landing_navbar.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
 }
-.logo{
+.login-navbar .logo{
     height: 60px;
     width: 170px;
 }
