--- a/frontend/src/components/landing_page/landing_navbar.css
+++ b/frontend/src/components/landing_page/landing_navbar.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 .login-navbar{
-    padding: 7px;
-    border: 1px solid hsla(0, 0%, 65%, 0.158);
+    /* padding: 7px; */
+    /* border: 1px solid hsla(0, 0%, 65%, 0.158); */
     box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    /* border-radius: 8px; */
     backdrop-filter: blur(20px);
    
     height:7vh;
@@ -12,13 +14,21 @@
     align-items: center;
 }
 .login-navbar .logo{
-    height: 60px;
-    width: 170px;
+    font-family: Ubuntu;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+    color: rgb(93, 0, 255);
+    padding: 0px 10px;
 }
 .right-login-navbar{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10vh;
-    margin-right: 4vw;
+    /* margin-right: 4vw; */
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: rgb(93, 0, 255);
+    padding: 0px 10px;
 }
