--- a/frontend/src/components/landing_page/section3/Footer.css
+++ b/frontend/src/components/landing_page/section3/Footer.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 .footer-distributed {
     background-color: #000;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -142,8 +144,9 @@
     margin-bottom: 5px;
   }
   .img{
-    width: 150px;
-    height: 150px;
+    font-family: Ubuntu;
+    font-size: 40px;
+    color: white;
   }
   
   /* If you don't want the footer to be responsive, remove these media queries */
